--- a/templates/plugin_guard.template.yml
+++ b/templates/plugin_guard.template.yml
@@ -10,6 +10,8 @@ hooks:
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/extensions/plugin_instance.rb lib/plugin_guard/extensions/plugin_instance.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/error.rb lib/plugin_guard/error.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/handler.rb lib/plugin_guard/handler.rb
+          - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/registration.rb lib/plugin_guard/registration.rb
+          - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/status.rb lib/plugin_guard/status.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/store.rb lib/plugin_guard/store.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard.rb lib/plugin_guard.rb
           - cp -rf /shared/discourse-plugin-guard/lib/tasks/plugin_guard.rake lib/tasks/plugin_guard.rake
