Add rudimentary asset validator

--- a/templates/plugin_guard.template.yml
+++ b/templates/plugin_guard.template.yml
@@ -13,6 +13,7 @@ hooks:
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/registration.rb lib/plugin_guard/registration.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/status.rb lib/plugin_guard/status.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/store.rb lib/plugin_guard/store.rb
+          - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard/validator.rb lib/plugin_guard/validator.rb
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_guard.rb lib/plugin_guard.rb
           - cp -rf /shared/discourse-plugin-guard/lib/tasks/plugin_guard.rake lib/tasks/plugin_guard.rake
           - cp -rf /shared/discourse-plugin-guard/lib/plugin_initialization_guard.rb lib/plugin_initialization_guard.rb
